Segunda entrega del proyecto final
Cambio:
-Nueva paleta de colores
-Responsive
Futuros cambios:
-Mejora visual

--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/css/styles.css
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/css/styles.css
@@ -1,40 +1,44 @@
 /*-----------------header, footer y body-----------------*/
 .logo {
+    display: flex;
+    justify-content: center;
     font-size: 30px;
     font-weight: bold;
     padding: 0 40px;
     line-height: 80px;
     text-decoration: none;
     color: aliceblue;
-    display: flex;
-    justify-content: center;
+
 }
 
 header {
-    background-color: rgb(42, 42, 42);
+    background-color: #543b32;
     height: 80px;
     width: 100%;
     top: 0;
     left: 0;
     position: fixed;
+    
 }
 
 footer {
+    grid-area: footer;
     display: flex;
     justify-content: end;
 }
 
 body {
     font-family: roboto, Arial, sans-serif;
-    background: linear-gradient(to right, rgba(211, 211, 211, 0.89), white);
+    background: linear-gradient(to right, #d7ccc8, #f5f5f5);
     padding: 90px 20px 0px;
 }
- 
+
 /*-----------------Seccion NAV-----------------*/
 
 .home_nav {
-    display: flex;
+    display: grid;
     justify-content: space-between;
+    grid-template-columns: 1fr 1fr;
 }
 
 .home_logo {
@@ -45,7 +49,6 @@ body {
     line-height: 80px;
     text-decoration: none;
     color: aliceblue;
-
 }
 
 .home_nav li {
@@ -56,7 +59,7 @@ body {
 }
 
 .home_nav-link {
-    padding: 8px 12px;
+    padding: 8px 8px;
     border-radius: 3px;
     text-decoration: none;
     color: aliceblue;
@@ -70,7 +73,7 @@ body {
 }
 
 .home_nav-link:hover {
-    background-color: #111;
+    background-color: #3c2a24;
 }
 
 /*-----------------Estilo de formulario Universal-----------------*/
@@ -78,6 +81,7 @@ body {
 .form_style-main {
     padding: 20px 0px;
     border-style: solid;
+    border-color: #586a78;
     height: max-content;
     width: 400px;
     margin-left: auto;
@@ -124,12 +128,13 @@ body {
     background-color: transparent;
     border-width: 3px;
     border-style: solid;
-    border-color: #000000;
+    border-color: #586a78;
     transition: all 700ms;
+
 }
 
 .form_button:hover {
-    background: rgb(42, 42, 42);
+    background: #7f98ac;
     color: #fff !important;
 }
 
@@ -141,45 +146,113 @@ body {
     padding: 10px;
 }
 
-.consulta_style-search input {
+.consulta_style-search input{
     width: 300px;
     height: 50px;
-    background: aliceblue;
-    border-color: #000000;
-    font-size: 10pt;
-    color: #63717f;
+    background: #7a5446;
+    border-style: solid;
+    border-color: #7a5446;
     padding-left: 45px;
     border-radius: 5px;
     transition: all 700ms;
 }
 
 .consulta_style-search input:hover {
-    background: rgb(42, 42, 42);
+    background: #d7ccc8;
+    border-color: #3c2a24;
     color: #fff !important;
 }
 
-.consulta_style{
+.consulta_style {
     text-align: center;
-    padding-bottom: 10px;
+    padding: 20px 0px;
     font-size: x-large;
     font-weight: 600;
 }
 
-.consulta_style-fieldset{
-    display:flex;
+.consulta_style-fieldset {
+    display: grid;
+    grid-template-columns: 150px 300px;
+    justify-content: stretch;
+    grid-row-gap: 50px;
+    grid-column-gap: 20px;
     border-style: solid;
-    width: fit-content;
-    padding: 15px 15px;
-    margin: 15px 5px;
+    border-color: #586a78;
+    padding: 15px;
 }
 
-
-.consulta_style-orden{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.consulta_style-orden {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(12 1fr);
+    grid-row-gap: 25px;
+    grid-column-gap: 25px;
 }
 
-.consulta_style-padding{
-    padding-right: 25px;
+/*-----------------Seccion MediaQuerie-----------------*/
+@media (max-width: 1366px){
+
+    .consulta_style-orden {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(12 1fr);
+        grid-row-gap: 25px;
+        grid-column-gap: 25px;
+    }
+
+    .home_logo {
+        font-size: 30px;
+        display: flex;
+        font-weight: bold;
+        padding: 0 40px;
+        line-height: 80px;
+        text-decoration: none;
+        color: aliceblue;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .consulta_style-orden {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12 1fr);
+        grid-row-gap: 25px;
+        grid-column-gap: 25px;
+    }
+
+    .home_nav {
+        display: grid;
+        flex-direction: row;
+        justify-content: space-between;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .home_logo {
+        font-size: 30px;
+        display: flex;
+        justify-content: center;
+        font-weight: bold;
+        padding: 0 40px;
+        line-height: 80px;
+        text-decoration: none;
+        color: aliceblue;
+    }
+
+    header {
+        background-color: #795548;
+        height: 160px;
+        width: 100%;
+        top: 0;
+        left: 0;
+        position: fixed;
+        grid-area: header;
+    }
+
+    body {
+        font-family: roboto, Arial, sans-serif;
+        background: linear-gradient(to right, #d7ccc8, #f5f5f5);
+        padding: 180px 20px 0px;
+    }
 }
