--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/css/styles.css
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/css/styles.css
@@ -13,26 +13,31 @@
 
 header {
     background-color: #543b32;
-    height: 80px;
+    height: auto;
     width: 100%;
     top: 0;
     left: 0;
-    position: fixed;
-    
 }
 
 footer {
-    grid-area: footer;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
+    padding-right: 10px;
 }
 
 body {
     font-family: roboto, Arial, sans-serif;
     background: linear-gradient(to right, #d7ccc8, #f5f5f5);
-    padding: 90px 20px 0px;
+    margin: 0;
 }
 
+.image-body {
+    background-image: url(../img/PipoLogo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
 /*-----------------Seccion NAV-----------------*/
 
 .home_nav {
@@ -44,17 +49,21 @@ body {
 .home_logo {
     font-size: 30px;
     display: flex;
+    justify-content: flex-start;
+    align-items: center;
     font-weight: bold;
-    padding: 0 40px;
-    line-height: 80px;
+    padding: 0px;
     text-decoration: none;
     color: aliceblue;
+    padding-left: 50px;
 }
 
 .home_nav li {
+    display: flex;
     font-size: 20px;
-    margin: 0 10px;
-    line-height: 50px;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 10px;
     text-transform: uppercase;
 }
 
@@ -69,6 +78,7 @@ body {
     display: flex;
     margin-right: 40px;
     list-style: none;
+    justify-content: center;
     justify-content: space-between;
 }
 
@@ -76,17 +86,68 @@ body {
     background-color: #3c2a24;
 }
 
+/*-----------------Home-----------------*/
+
+.home_logo-image{
+    background-image: url(../img/PipoLogo.jpg);
+    background-position: center; 
+    background-size: cover;
+    height: 350px;
+}
+
+.home_about{
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    grid-template-columns: 550px;
+    grid-template-rows: min-content fit-content;
+}
+
+.home_subtittle{
+    font-size: 30px;
+    font-weight: bold;
+
+}
+
+.home_books{
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}   
+
+.home_galery-books {
+    justify-content: center;
+    max-width: 800px;
+    padding: 1rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 320px);
+    grid-template-rows: repeat(3, 450px);
+    gap: 1rem;
+}
+
+.home_galery-books img {
+    object-fit: cover;
+    height: 100%;
+    border-radius: 10px;
+}
+
+
+
 /*-----------------Estilo de formulario Universal-----------------*/
 
 .form_style-main {
-    padding: 20px 0px;
-    border-style: solid;
-    border-color: #586a78;
+    padding: 20px;
+    border-style:hidden;
+    border-color: rgba(127, 152, 172, 0.6);
+    border-radius: 15px;
     height: max-content;
-    width: 400px;
+    width: max-content;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
+    background-color: rgba(127, 152, 172, 0.6);
 }
 
 .form_style-tittle {
@@ -94,11 +155,12 @@ body {
     padding-bottom: 10px;
     font-size: x-large;
     font-weight: 600;
+    color: #f5f5f5;
 }
 
 .form_style {
     position: flex;
-    text-align: center;
+    justify-content: center;
 }
 
 .form_style label {
@@ -106,7 +168,34 @@ body {
     justify-content: center;
     padding-top: 18px;
     margin-bottom: 5px;
+    color: #e3e0e0;
 }
+
+.form_style-input {
+    display: flex;
+    justify-content: center;
+}
+
+.form_style input {
+    border-color: transparent;
+    text-align: center;
+    background-color: transparent;
+    border-bottom: 2px solid gray;
+    outline: 0;
+    font-size: 1rem;
+    padding: 7px 0;
+    background: transparent;
+    transition: all 600ms;
+}
+
+.form_style input::placeholder{
+    color: #a4a1a1;
+}
+.form_style input:focus{
+    color: #292929;
+    border-bottom: 2px solid #292929;
+}
+
 
 /*-----------------Estilo botón universal-----------------*/
 
@@ -120,7 +209,7 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 15px;
-    color: #000000;
+    color: #fff;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 25px;
@@ -128,14 +217,14 @@ body {
     background-color: transparent;
     border-width: 3px;
     border-style: solid;
-    border-color: #586a78;
+    border-color: #fff;
     transition: all 700ms;
 
 }
 
 .form_button:hover {
-    background: #7f98ac;
-    color: #fff !important;
+    background: #fff;
+    color: black !important;
 }
 
 /*-----------------Seccion Consulta universal-----------------*/
@@ -146,7 +235,7 @@ body {
     padding: 10px;
 }
 
-.consulta_style-search input{
+.consulta_style-search input {
     width: 300px;
     height: 50px;
     background: #7a5446;
@@ -177,6 +266,8 @@ body {
     grid-row-gap: 50px;
     grid-column-gap: 20px;
     border-style: solid;
+    border-radius: 15px;
+    background-color: rgba(127, 152, 172, 0.6);
     border-color: #586a78;
     padding: 15px;
 }
@@ -190,7 +281,7 @@ body {
 }
 
 /*-----------------Seccion MediaQuerie-----------------*/
-@media (max-width: 1366px){
+@media (max-width: 1440px) {
 
     .consulta_style-orden {
         display: grid;
@@ -200,14 +291,15 @@ body {
         grid-column-gap: 25px;
     }
 
-    .home_logo {
-        font-size: 30px;
-        display: flex;
-        font-weight: bold;
-        padding: 0 40px;
-        line-height: 80px;
-        text-decoration: none;
-        color: aliceblue;
+    .home_galery-books {
+        justify-content: center;
+        max-width: 800px;
+        padding: 1rem;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(3, 320px);
+        grid-template-rows: repeat(4, 450px);
+        gap: 1rem;
     }
 }
 
@@ -241,18 +333,120 @@ body {
     }
 
     header {
-        background-color: #795548;
-        height: 160px;
+        background-color: #543b32;
+        height: max-content;
+        padding-bottom: auto;
         width: 100%;
         top: 0;
         left: 0;
-        position: fixed;
-        grid-area: header;
     }
 
     body {
         font-family: roboto, Arial, sans-serif;
         background: linear-gradient(to right, #d7ccc8, #f5f5f5);
-        padding: 180px 20px 0px;
+    
+    }
+
+    .home_galery-books {
+        justify-content: center;
+        max-width: 800px;
+        padding: 1rem;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(2, 320px);
+        grid-template-rows: repeat(4, 450px);
+        gap: 1rem;
     }
 }
+
+@media (max-width: 480px) {
+
+    .consulta_style-orden {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12 1fr);
+        grid-row-gap: 25px;
+        grid-column-gap: 25px;
+    }
+
+    .home_nav {
+        display: grid;
+        flex-direction: row;
+        justify-content: space-between;
+        grid-template-columns: 100%;
+        grid-template-rows: 1fr 150px;
+    }
+
+    .home_nav ul {
+        margin-right: 40px;
+        list-style: none;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .home_logo {
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        font-weight: bold;
+        padding: 0 40px;
+        line-height: 80px;
+        text-decoration: none;
+        color: aliceblue;
+    }
+
+    header {
+        background-color: #543b32;
+        height: fit-content;
+        width: 100%;
+        top: 0;
+        left: 0;
+    }
+
+    .consulta_style-fieldset {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0px 20px;
+        justify-content: stretch;
+        grid-row-gap: 50px;
+        grid-column-gap: 20px;
+        border-style: solid;
+        border-color: #586a78;
+        padding: 15px;
+    }
+
+    body {
+        font-family: roboto, Arial, sans-serif;
+        background: linear-gradient(to right, #d7ccc8, #f5f5f5);
+        
+    }
+
+    .home_galery-books {
+        justify-content: center;
+        max-width: 800px;
+        padding: 1rem;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(1, 320px);
+        grid-template-rows: repeat(5, 450px);
+        gap: 1rem;
+    }
+
+    .home_about{
+        display: grid;
+        justify-content: center;
+        text-align: center;
+        grid-template-columns: 250px;
+        grid-template-rows: min-content fit-content;
+    }
+
+    .home_nav li {
+        display: flex;
+        font-size: 15px;
+        justify-content: center;
+        align-items: center;
+        margin: 0px 10px;
+        text-transform: uppercase;
+    }
+}
+
